# decentlink

./: .env.example  .gitignore  README.md  auth.ts  hardhat.config.js  middleware.ts  package-lock.json  package.json  structure.txt  tailwind.config.js
artifacts/contracts/Registry.sol/: Registry.dbg.json  Registry.json
cache/: solidity-files-cache.json
contract/: Anchor.toml  package-lock.json  package.json
contract/client/: client.ts
contract/programs/registry/: Cargo.toml
contract/programs/registry/src/: lib.rs
contract/tests/: anchor.ts
contracts/: Registry.sol
idl/: registry.json
prisma/: schema.prisma
prisma/migrations/20250512173646_init/: migration.sql
prisma/migrations/20250513051846_dev_add_stuff/: migration.sql
prisma/migrations/20250513060203_add_unknown_device_type/: migration.sql
prisma/migrations/20250513060428_add_click_update/: migration.sql
scripts/: deploy.js
src/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx
src/app/[shortCode]/: page.tsx
src/app/analytics/: page.tsx
src/app/api/: analytics.ts  users.ts
src/app/api/analytics/: route.ts
src/components/: Analytics.tsx  ConnectWallet.tsx  FeaturesGrid.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  StatsBanner.tsx  UrlShortener.tsx  WalletContext.tsx
src/components/analytics/: AnalyticsCard.tsx  AnalyticsGrid.tsx  AnalyticsHeader.tsx  DisconnectButton.tsx  EmptyState.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
src/components/ui/: button.tsx  card.tsx
src/hooks/: useAnalytics.ts
src/lib/: prisma.ts  utils.ts
src/utils/: ethers.ts
(+4 files in other folders)
